--- a/03-sequence-diagram.html
+++ b/03-sequence-diagram.html
@@ -29,8 +29,8 @@
             <tbody>
             <tr>
                 <td>Frame</td>
-                <td><img src="assets/images/sequence-frame.png" alt="Frame"></td>
-                <td>Elément optionel permettant d'identifier un diagramme par son label.</td>
+                <td><img src="assets/images/frame.png" alt="Frame"></td>
+                <td>Elément permettant d'identifier un diagramme par son label.</td>
             </tr>
             <tr>
                 <td>Lifeline</td>
