--- a/05-sequence.html
+++ b/05-sequence.html
@@ -182,7 +182,7 @@
                 <li>
                     Si la saisie est ok, une vérification est envoyée en base de données.
                     <ul>
-                        <li>Si l'utilsateur existe, il est alors connecté et redirigé vers la page d'accueil.</li>
+                        <li>Si l'utilisateur existe, il est alors connecté et redirigé vers la page d'accueil.</li>
                         <li>Sinon, le formulaire de login est à nouveau affiché.</li>
                     </ul>
                 </li>
